# hackiplan

app/: pyproject.toml
app/licitacaorio/: settings.py
app/templates/: layout.html
app/templates/users/: success.html  update.html
app/users/: apps.py  forms.py  urls.py  utils.py  views.py
